@@ -1,6 +1,7 @@
 v0.4.0 ()
   New features
 	* Big refactor of the PuppetDB API
+	* New "fake" PuppetDB used for testing
 
 v0.3.3 (2013/01/21)
   New features
